Fix : gap in form replace to margin, because Safari don't support gap in flex

--- a/style.css
+++ b/style.css
@@ -515,12 +515,14 @@ body{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 10px;
-    margin-bottom: 12px;
+    margin-bottom: 2px;
     margin-top: 4px;
+    margin-left: -10px;
 }
 .form__input-wrap{
     position: relative;
+    margin-bottom: 10px;
+    margin-left: 10px;
 }
 .form__input-big{
     width: 100%;    
@@ -611,12 +613,14 @@ body{
     width: 345px;
     margin-right: 20px;
 }
-.form__item-pay{
-    gap: 15px;
+.form__item-pay {
+    margin-left: -15px;
+}
+.form__item-pay .form__input-wrap{
+    margin-left: 15px;
 }
 .form__item-last{
     display: flex;
-    gap: 0;
     flex-direction: row;
     justify-content: space-between;
 }
@@ -638,10 +642,10 @@ body{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 10px;
 }
 .form__import textarea{
     width: 440px;
+    margin-bottom: 10px;
     height: 80px;
     padding: 6px 20px;
     box-sizing: border-box;
